--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,29 @@
-<h1><%= @task.title %></h1>
-<p><%= @task.details %></p>
-<p><%= @task.completed %></p>
+<h1 class="text-center p-3"><%= @task.title %></h1>
 
-<%= link_to "All Tasks", tasks_path %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6">
+      <span><% if @task.completed == true %>
+        <i class="far fa-check-square"></i>
+        <% else %>
+        <i class="far fa-square"></i>
+        <% end %>
+      </span>
+      <span class="p-3"><%= @task.details %></span>
+    </div>
+  </div>
+  <br>
+
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6">
+      <ul>
+      <li class="p-1"><%= link_to "Edit Task", edit_task_path %></li>
+      <li class="p-1"><%= link_to "Delete Task",
+          task_path(@task),
+          method: :delete,
+          data: { confirm: "Are you sure you want to delete this task?" } %></li>
+      <li class="p-1"><%= link_to "Back to All Tasks", tasks_path %></li>
+      </ul>
+    </div>
+  </div>
+</div>
