--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,1 @@
-<div style="width: 50vh">
-  <%= simple_form_for(@task) do |t| %>
-    <%= t.input :title %>
-    <%= t.input :details %>
-    <%= t.submit %>
-  <% end %>
-</div>
+<%= render 'form' %>
